cdk.out/cb1721409202.template.json
{
 "Resources": {
  "cb1721409202CromwellBatchVPC1B603530": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/Resource"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1SubnetBF65FA56": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1a",
    "CidrBlock": "10.0.0.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1RouteTable1FC7C7B7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1RouteTableAssociation82BF3D6B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1RouteTable1FC7C7B7"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1SubnetBF65FA56"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1DefaultRouteA497BA30": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCIGW556C717A"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1RouteTable1FC7C7B7"
    }
   },
   "DependsOn": [
    "cb1721409202CromwellBatchVPCVPCGW21DCBE9E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1EIPC3D585A6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/EIP"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet1NATGatewayDDD9DA7C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "cb1721409202CromwellBatchVPCPublicSubnet1EIPC3D585A6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1SubnetBF65FA56"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "cb1721409202CromwellBatchVPCPublicSubnet1DefaultRouteA497BA30",
    "cb1721409202CromwellBatchVPCPublicSubnet1RouteTableAssociation82BF3D6B"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet1/NATGateway"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet2Subnet669B6328": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1b",
    "CidrBlock": "10.0.16.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet2RouteTableA64F3801": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet2RouteTableAssociationDEC9F150": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet2RouteTableA64F3801"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet2Subnet669B6328"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet2DefaultRoute54B90BAA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCIGW556C717A"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet2RouteTableA64F3801"
    }
   },
   "DependsOn": [
    "cb1721409202CromwellBatchVPCVPCGW21DCBE9E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet3Subnet6298FA51": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1c",
    "CidrBlock": "10.0.32.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet3RouteTableD2DB88AA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet3RouteTableAssociation91B2A2F0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet3RouteTableD2DB88AA"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet3Subnet6298FA51"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPublicSubnet3DefaultRoute00379F0E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCIGW556C717A"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet3RouteTableD2DB88AA"
    }
   },
   "DependsOn": [
    "cb1721409202CromwellBatchVPCVPCGW21DCBE9E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PublicSubnet3/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet1SubnetF112AA75": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1a",
    "CidrBlock": "10.0.48.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet1RouteTableFA719FC4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet1RouteTableAssociationC1232A15": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet1RouteTableFA719FC4"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet1SubnetF112AA75"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet1DefaultRouteB633309D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1NATGatewayDDD9DA7C"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet1RouteTableFA719FC4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet2SubnetBCE125A8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1b",
    "CidrBlock": "10.0.64.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet2RouteTable635E57CD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet2RouteTableAssociation51DBB3DC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet2RouteTable635E57CD"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet2SubnetBCE125A8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet2DefaultRouteFD43DDE7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1NATGatewayDDD9DA7C"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet2RouteTable635E57CD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet3Subnet502CF93B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1c",
    "CidrBlock": "10.0.80.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3/Subnet"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet3RouteTableCC401ACE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3/RouteTable"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet3RouteTableAssociation5E0F835F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet3RouteTableCC401ACE"
    },
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet3Subnet502CF93B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "cb1721409202CromwellBatchVPCPrivateSubnet3DefaultRoute90639DF3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCPublicSubnet1NATGatewayDDD9DA7C"
    },
    "RouteTableId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet3RouteTableCC401ACE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/PrivateSubnet3/DefaultRoute"
   }
  },
  "cb1721409202CromwellBatchVPCIGW556C717A": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202/cb1721409202-CromwellBatchVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/IGW"
   }
  },
  "cb1721409202CromwellBatchVPCVPCGW21DCBE9E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "cb1721409202CromwellBatchVPCIGW556C717A"
    },
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/VPCGW"
   }
  },
  "cb1721409202CromwellBatchVPCRestrictDefaultSecurityGroupCustomResourceE13D6887": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "cb1721409202CromwellBatchVPC1B603530",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "763309664766"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cb1721409202/cb1721409202-CromwellBatchVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-east-1:763309664766:security-group/",
             {
              "Fn::GetAtt": [
               "cb1721409202CromwellBatchVPC1B603530",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-763309664766-ap-east-1",
     "S3Key": "7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721409202/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474",
    "aws:asset:property": "Code"
   }
  },
  "CromwellEFSAEAADC6E": {
   "Type": "AWS::EFS::FileSystem",
   "Properties": {
    "Encrypted": true,
    "FileSystemPolicy": {
     "Statement": [
      {
       "Action": [
        "elasticfilesystem:ClientRootAccess",
        "elasticfilesystem:ClientWrite"
       ],
       "Condition": {
        "Bool": {
         "elasticfilesystem:AccessedViaMountTarget": "true"
        }
       },
       "Effect": "Allow",
       "Principal": {
        "AWS": "*"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "FileSystemTags": [
     {
      "Key": "Name",
      "Value": "cb1721409202-CromwellEFS"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CromwellEFS/Resource"
   }
  },
  "CromwellEFSEfsSecurityGroup715F735C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cb1721409202/CromwellEFS/EfsSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721409202-CromwellEFS"
     }
    ],
    "VpcId": {
     "Ref": "cb1721409202CromwellBatchVPC1B603530"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CromwellEFS/EfsSecurityGroup/Resource"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet120D8EEF1": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet1SubnetF112AA75"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CromwellEFS/EfsMountTarget-PrivateSubnet1"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet226F71E60": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet2SubnetBCE125A8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CromwellEFS/EfsMountTarget-PrivateSubnet2"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet376982331": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721409202CromwellBatchVPCPrivateSubnet3Subnet502CF93B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CromwellEFS/EfsMountTarget-PrivateSubnet3"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOQWvCQBCFf4v3zbYqCD2G0IqHypKI1zJZJ3FqMiu7s4YQ8t9LajHtoaf33jeP4a308nmtlwvoQmJPl6ShUg+FgL0o6MLHgHalh+PVqqzio8mUiWVDtoglo0xsdrmLggcoG5z5zNIQnCUQcvwoT+Z1ZybZg2xBsINeGU83EJwf71jQMz4K9yU/KRUBe26RRRVooyfpt97F6/eG32BUWAU9vFGDRR8E26nxN727yHIAX6OMo8oxuOgtqiwGce0cK/7nZLy70Qm9SkNAKQRq4npUppez46e1ftGbxWcgSnxkoRZ1ftcv6Eb2goQBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "cb1721409202/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
