cdk.out/cb1721410024.template.json
{
 "Resources": {
  "cb1721410024CromwellBatchVPCA158839B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/Resource"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1Subnet4609341F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1a",
    "CidrBlock": "10.0.0.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1RouteTable9BB30574": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1RouteTableAssociationA23598FC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1RouteTable9BB30574"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1Subnet4609341F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1DefaultRoute5F093797": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCIGW3D6399BA"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1RouteTable9BB30574"
    }
   },
   "DependsOn": [
    "cb1721410024CromwellBatchVPCVPCGW25B35E6E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1EIPDC668FA4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/EIP"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet1NATGatewayB02363D6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "cb1721410024CromwellBatchVPCPublicSubnet1EIPDC668FA4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1Subnet4609341F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "cb1721410024CromwellBatchVPCPublicSubnet1DefaultRoute5F093797",
    "cb1721410024CromwellBatchVPCPublicSubnet1RouteTableAssociationA23598FC"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet1/NATGateway"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet2Subnet00529253": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1b",
    "CidrBlock": "10.0.16.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet2RouteTable50F9E280": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet2RouteTableAssociation2BAFFA1F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet2RouteTable50F9E280"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet2Subnet00529253"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet2DefaultRoute1AE2AA73": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCIGW3D6399BA"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet2RouteTable50F9E280"
    }
   },
   "DependsOn": [
    "cb1721410024CromwellBatchVPCVPCGW25B35E6E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet3SubnetBC665D26": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1c",
    "CidrBlock": "10.0.32.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet3RouteTableFBAAF56C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet3RouteTableAssociation75BE585E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet3RouteTableFBAAF56C"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet3SubnetBC665D26"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPublicSubnet3DefaultRouteAC1CBA2C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCIGW3D6399BA"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet3RouteTableFBAAF56C"
    }
   },
   "DependsOn": [
    "cb1721410024CromwellBatchVPCVPCGW25B35E6E"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PublicSubnet3/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet1SubnetFF8DCFD8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1a",
    "CidrBlock": "10.0.48.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet1RouteTable64E1CFC5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet1RouteTableAssociation4A43F694": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet1RouteTable64E1CFC5"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet1SubnetFF8DCFD8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet1DefaultRoute751737F6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1NATGatewayB02363D6"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet1RouteTable64E1CFC5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet2Subnet784BEE96": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1b",
    "CidrBlock": "10.0.64.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet2RouteTable82B01F61": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet2RouteTableAssociation05DACCE2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet2RouteTable82B01F61"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet2Subnet784BEE96"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet2DefaultRoute5D173269": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1NATGatewayB02363D6"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet2RouteTable82B01F61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet3SubnetD8F5891A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-east-1c",
    "CidrBlock": "10.0.80.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3/Subnet"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet3RouteTableA5B640ED": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3/RouteTable"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet3RouteTableAssociation9E0CC386": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet3RouteTableA5B640ED"
    },
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet3SubnetD8F5891A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "cb1721410024CromwellBatchVPCPrivateSubnet3DefaultRouteC389CE1F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCPublicSubnet1NATGatewayB02363D6"
    },
    "RouteTableId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet3RouteTableA5B640ED"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/PrivateSubnet3/DefaultRoute"
   }
  },
  "cb1721410024CromwellBatchVPCIGW3D6399BA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024/cb1721410024-CromwellBatchVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/IGW"
   }
  },
  "cb1721410024CromwellBatchVPCVPCGW25B35E6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "cb1721410024CromwellBatchVPCIGW3D6399BA"
    },
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/VPCGW"
   }
  },
  "cb1721410024CromwellBatchVPCRestrictDefaultSecurityGroupCustomResource9DDF88D6": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "cb1721410024CromwellBatchVPCA158839B",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "763309664766"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cb1721410024/cb1721410024-CromwellBatchVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-east-1:763309664766:security-group/",
             {
              "Fn::GetAtt": [
               "cb1721410024CromwellBatchVPCA158839B",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-763309664766-ap-east-1",
     "S3Key": "7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "cb1721410024/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474",
    "aws:asset:property": "Code"
   }
  },
  "CromwellEFSAEAADC6E": {
   "Type": "AWS::EFS::FileSystem",
   "Properties": {
    "Encrypted": true,
    "FileSystemTags": [
     {
      "Key": "Name",
      "Value": "cb1721410024-CromwellEFS"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CromwellEFS/Resource"
   }
  },
  "CromwellEFSEfsSecurityGroup715F735C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cb1721410024/CromwellEFS/EfsSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "cb1721410024CromwellBatchVPCA158839B",
        "CidrBlock"
       ]
      },
      "Description": "Allow NFS traffic from VPC",
      "FromPort": 2049,
      "IpProtocol": "tcp",
      "ToPort": 2049
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "cb1721410024-CromwellEFS"
     }
    ],
    "VpcId": {
     "Ref": "cb1721410024CromwellBatchVPCA158839B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CromwellEFS/EfsSecurityGroup/Resource"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet120D8EEF1": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet1SubnetFF8DCFD8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CromwellEFS/EfsMountTarget-PrivateSubnet1"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet226F71E60": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet2Subnet784BEE96"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CromwellEFS/EfsMountTarget-PrivateSubnet2"
   }
  },
  "CromwellEFSEfsMountTargetPrivateSubnet376982331": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CromwellEFSAEAADC6E"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CromwellEFSEfsSecurityGroup715F735C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "cb1721410024CromwellBatchVPCPrivateSubnet3SubnetD8F5891A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CromwellEFS/EfsMountTarget-PrivateSubnet3"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOQWvCQBCFf4v3zbYqCD2G0IqHypKI1zJZJ3FqMiu7s4YQ8t9LajHtoaf33jeP4a308nmtlwvoQmJPl6ShUg+FgL0o6MLHgHalh+PVqqzio8mUiWVDtoglo0xsdrmLggcoG5z5zNIQnCUQcvwoT+Z1ZybZg2xBsINeGU83EJwf71jQMz4K9yU/KRUBe26RRRVooyfpt97F6/eG32BUWAU9vFGDRR8E26nxN727yHIAX6OMo8oxuOgtqiwGce0cK/7nZLy70Qm9SkNAKQRq4npUppez46e1ftGbxWcgSnxkoRZ1ftcv6Eb2goQBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "cb1721410024/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
